format is good but still have spacing issues

--- a/css/twitter-flexbox.css
+++ b/css/twitter-flexbox.css
@@ -15,12 +15,12 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, Ubuntu, sans-serif;
-
 }
 
 a {
     color: var(--link-color);
 }
+
 .top-nav {
     background: var(--light-bg);
     width: 100%;
@@ -28,6 +28,7 @@ a {
     position: fixed;
     margin: 0;
 }
+
 .nav {
     list-style-type: none;
     padding: 0;
@@ -35,18 +36,22 @@ a {
     display: flex;
     justify-content: flex-start;
 }
+
 .nav-item {
     display: inline-block;
     padding: 1.5em;
 }
+
 .nav-link {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
 }
+
 .nav-link:hover {
     color: var(--link-color);
 }
+
 header {
     background-image: url("https://picsum.photos/1200/300");
     background-size: cover;
@@ -63,32 +68,39 @@ header {
     flex-direction: column;
     justify-content: space-evenly;
 }
+
 .profile-image {
     position: absolute;
     top: 15em;
 }
+
 .profile-form {
     display: flex;
     justify-content: flex-end;
     line-height: 80px;
     margin-right: .25em; /*Added since it was very close to the right side of the browser */
 }
+
 .profile-items {
     padding: 0;
     list-style: none;
 }
+
 .profile-entry {
     margin: .5em;
 }
+
 .container {
     padding-top: 2em;
     display: flex;
 }
+
 .profile-details, .who-to-follow{
     width: calc(25% - 1em);
     margin: 0 .5em;
     justify-content: flex-start;
 }
+
 .timeline{
     width: calc(50% - 1em);
     margin: 0 .5em;
@@ -100,28 +112,20 @@ header {
     padding: .5em;
     overflow: auto;
     display: flex;
+    flex-direction: column;
 }
+
 .media-image {
     max-width: 3em;
     margin-top: 1.33em;
     align-self: flex-start;
 }
 
-
-
-
-
 .media-body{
     width: calc(100% - 50px);
     padding-left: 1em;
-    justify-content: flex-end;
+    align-self: center;
 }
-
-
-
-
-
-
 
 .btn {
     border: 1px solid var(--main-link-color);
@@ -131,40 +135,24 @@ header {
     padding: 8px;
     border-radius: 5px;
 }
+
 .btn-large {
     font-size: 1.3em;
     padding: 10px;
 }
+
 .img-circle {
     border-radius: 100%;
     border: 4px solid var(--light-bg);
 }
+
 .text-right {
     text-align: right;
 }
+
 .text-muted {
     color: var(--main-link-color);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*.media-body {*/
-/*    float: left;*/
-/*    width: calc(100% - 50px);*/
-/*}*/
 
 
 
